# player

./: Cargo.toml
assets/data/: skeleton.animations.json
src/: animation.rs  app.rs  main.rs  player.rs
