[package]
name = "player"
version = "0.1.0"
authors = ["d-bagazhkov <dmytro.bagazhkov@gmail.com>"]

[dependencies]
piston = "0.52.0"
pistoncore-glutin_window = "0.68.0"
piston2d-graphics = "0.39.0"
piston2d-opengl_graphics = "0.77.0"
rand = "0.6.0"
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.59"